Merged admin feature and updated frontend API integration